--- a/src/components/body/Explanation/Expl.css
+++ b/src/components/body/Explanation/Expl.css
@@ -18,7 +18,7 @@
 }
 
 .button01 {
-    margin: 2rem 1rem;
+    margin: 5rem 3rem;
 }
 
 .button0 {
@@ -37,5 +37,24 @@
 .button0-text {
     font-size: 1rem;
     text-align: center;
+ 
+}
+.button1 {
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+    background-color: #464646;
+    border: none; 
+    font-family: "Oswald", sans-serif;
+    font-weight: 500;
+    width: 12rem;
+    height: 2rem;
+    cursor: pointer; 
+}
+
+.button1-text {
+    font-size: 1rem;
+    text-align: center;
+    color :#f2e8d9;
 }
     
