--- a/src/components/body/Explanation/Expl.css
+++ b/src/components/body/Explanation/Expl.css
@@ -31,13 +31,14 @@
     font-weight: 500;
     width: 12rem;
     height: 2rem;
-    cursor: pointer; 
+    cursor: pointer;
+    border-radius: 0.2rem; 
 }
 
 .button0-text {
     font-size: 1rem;
     text-align: center;
- 
+    margin-left: 0.3rem;
 }
 .button1 {
     display: flex;
@@ -50,6 +51,7 @@
     width: 12rem;
     height: 2rem;
     cursor: pointer; 
+    border-radius: 0.2rem;
 }
 
 .button1-text {
