--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,9 @@ body {
   height: 100vh; /* Устанавливаем высоту на 100% высоты окна */
   margin: 0; /* Убираем отступы по умолчанию */
   background-color: #000; /* Задаем цвет фона, например, черный */
+  font-family: "Rubik", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  
 }
