--- a/src/components/body/Heart/HeartSryle.css
+++ b/src/components/body/Heart/HeartSryle.css
@@ -24,10 +24,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
+   
 }
 
 .textH {
     width: 40%;
     font-size: 0.9rem;
 
+}
+
+.video{
+    width: 35rem;
+    margin-left: 5rem;
+    margin-bottom: 2rem;
 }
