--- a/src/components/Head/HeadStile.css
+++ b/src/components/Head/HeadStile.css
@@ -34,6 +34,7 @@
     font-family: "Balsamiq Sans", sans-serif;
     font-weight: 400;
     font-style: normal;
+    cursor: pointer;
   }
   
   .text-head {
