--- a/src/adaption/adaption.css
+++ b/src/adaption/adaption.css
@@ -469,7 +469,7 @@
         width: 10rem;
     }
 
-    .bacgraundW {
+    .Heart {
         background: url('../img/bg.jpg');
         background-position-x: 0%;
         background-position-y: 0%;
